--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       made by Ozzy with <3 <br />
       css by 3kh0<br />
       NOTE: This page must be loaded through uv based proxy to work<br />
-      <a class="link" href="https://github.com/liutristan/shuttlegames">Deploy your own games page here!</a><br />
+      <a class="link" href="https://firebases.hop.sh">Go To The Old Site Here</a><br />
       <style>
         a:link {
           color: green;
